[project]
name = "ai-lab-dashboard"
version = "0.1.0"
description = "LBS AI Lab Interactive Dashboard"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
    "pandas>=2.2.0",
    "gunicorn>=23.0.0",
    "requests>=2.33.1",
    "duckdb==1.5.1",
    "msal>=1.32.0",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = []
